[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Test.gd" type="Script" id=1]

[node name="Test" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Control2" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control2"]
anchor_right = 1.0
margin_left = 660.0
margin_top = 330.0
margin_right = -220.0
margin_bottom = 510.0
rect_min_size = Vector2( 100, 100 )
color = Color( 0.196078, 0.603922, 0.960784, 1 )

[node name="ColorRect" type="ColorRect" parent="Control2/ColorRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -20.0
margin_bottom = 20.0

[node name="ColorRectL" type="ColorRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0

[node name="ColorRectT" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0

[node name="ColorRectR" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -20.0
margin_bottom = 20.0

[node name="ColorRectB" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0

[node name="ColorRectC" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -380.0
margin_top = -220.0
margin_right = -280.0
margin_bottom = -120.0
rect_min_size = Vector2( 100, 100 )
text = "Time1"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -220.0
margin_right = -60.0
margin_bottom = -120.0
rect_min_size = Vector2( 100, 100 )
text = "Time2"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 110.0
margin_top = -210.0
margin_right = 210.0
margin_bottom = -110.0
rect_min_size = Vector2( 100, 100 )
text = "Result
"
align = 1
valign = 1
[connection signal="mouse_entered" from="ColorRectC" to="." method="_on_ColorRectC_mouse_entered"]
